Added progress bar on goals page

--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -3,10 +3,22 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 @import 'application.scss';
 
-.nav{
 
+.row {
+    display: table;
+}
+
+[class*="col-"] {
+    float: none;
+    display: table-cell;
+    vertical-align: top;
+
+}
+
+.nav{
   margin-left: 17%;
 }
+
 .pageNavBar{
   background-color: $color1;
   float: left;
@@ -43,7 +55,7 @@
   background-attachment: fixed;
   border-radius: 5px / 5px;
   border: 2px solid rgba(67, 67, 67, 0.5);
-  margin: 10px auto;
+  margin: 5px;
 }
 
 .float-box-mid{
@@ -54,7 +66,7 @@
   background-attachment: fixed;
   border-radius: 5px / 5px;
   border: 2px solid rgba(67, 67, 67, 0.5);
-  margin: 10px auto;
+  margin: 5px ;
 }
 
 
@@ -66,10 +78,48 @@
   background-attachment: fixed;
   border-radius: 5px / 5px;
   border: 2px solid rgba(67, 67, 67, 0.5);
-  margin: 10px auto;
+  margin: 5px;
 }
 
-.col {
-  display: table-cell;
-  padding: 16px;
+//progress bar
+.bar-container {
+  background: #f0f0f0;
+  height: 400px;
+  width: 50%;
+  border-radius: 10px;
+  margin-top: 10%;
+  margin-left: 15%;
+  opacity: 0.8;
+}
+.bar {
+  //display: inline-block;
+  background: #00F260;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 50px;
+  width: 100%;
+  border-radius: 10px;
+  transition: width 400ms;
+}
+
+div#myDiv {
+  -ms-transform: rotate(180deg); /* IE 9 */
+  transform: rotate(180deg); /* Standard syntax */
+}
+
+.progress-bar-vertical {
+  width: 20px;
+  min-height: 100px;
+  display: flex;
+  align-items: flex-end;
+  margin-right: 20px;
+  float: left;
+}
+
+.progress-bar-vertical .progress-bar {
+  width: 100%;
+  height: 0;
+  -webkit-transition: height 0.6s ease;
+  -o-transition: height 0.6s ease;
+  transition: height 0.6s ease;
 }
