--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -131,6 +131,7 @@ a[data-toggle="collapse"] {
    width:100%;
    min-width: 650px;
    position: relative;
+   color: white;
 }
 
 .pageDescriptionContent{
