--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -6,6 +6,123 @@
 </head>
 
 <body>
+  <div id ="content" class="container-fluid" style="margin-top: 15%; border: solid black; margin-left: 2%;">
+  	<div class="row">
 
+      <!-- left float -->
+
+<div class="float-box-left">
+  		<div class="col-md-2">
+
+  			<h3>
+  			psum dolor sit amet.
+  			</h3>
+  			<ol>
+  				<li class="list-item">
+  					Lorem ipsum dolor sit amet
+  				</li>
+  				<li class="list-item">
+  					Consectetur adipiscing elit
+  				</li>
+
+  			</ol>
+  		</div> </div>
+
+        <!-- middle float -->
+        <div class="float-box-mid">
+  		<div class="col-md-8">
+  			<div class="row">
+  				<div class="col-md-4">
+
+    <!-- Container -->
+        <div class="bar-container" id="myDiv">
+          <div class="bar" id="bar"></div>
+        </div>
+    <!-- End Of Container -->
+
+  				</div>
+  				<div class="col-md-8">
+  					<h3>
+  						[GROUP NAME] PAYMENTS
+  					</h3>
+  					<ol>
+  						<li class="list-item">
+  							Lorem ipsum dolor sit amet
+  						</li>
+  						<li class="list-item">
+  							Consectetur adipiscing elit
+  						</li>
+  						<li class="list-item">
+  							Integer molestie lorem at massa
+  						</li>
+  						<li class="list-item">
+  							Facilisis in pretium nisl aliquet
+  						</li>
+  						<li class="list-item">
+  							Nulla volutpat aliquam velit
+  						</li>
+  						<li class="list-item">
+  							Faucibus porta lacus fringilla vel
+  						</li>
+  						<li class="list-item">
+  							Aenean sit amet erat nunc
+  						</li>
+  						<li class="list-item">
+  							Eget porttitor lorem
+  						</li>
+  					</ol>
+  					<button type="button" class="btn btn-success">
+  						Button
+  					</button>
+  					<button type="button" class="btn btn-success">
+  						Button
+  					</button>
+  				</div>
+  			</div>
+  		</div>
+      </div>
+
+      <!-- right float -->
+      <!-- right float top -->
+
+      <div class="col-md-2">
+
+        <div class="float-box-right">
+  			<div class="row">
+  				<div class="col-md-12">
+  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+  				</div>
+  			</div>
+        </div>
+
+        <!-- right float middle -->
+        <div class="float-box-right">
+  			<div class="row">
+  				<div class="col-md-12">
+  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+  				</div>
+  			</div>
+        </div>
+
+          <!-- right float bottom -->
+          <div class="float-box-right">
+  			<div class="row">
+  				<div class="col-md-12">
+  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+  				</div>
+  			</div>
+        </div>
+
+
+  		</div>
+  	</div>
+  </div>
 
 </body>
+</html>
+<!-- Text -->
+<div class="text" id="text">0%</div>
+<!-- End Of Text -->
+!--  Button   -->
+<button class="btn" type="button" id="btn">+10</button>
+<!--   End Of Button  -->
