fix some coding errors with routes and rendering partials

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -54,7 +54,7 @@
 </div>
 </Navbar>
 
-<% if controller_name == "goals"  %>
+<% if if params[:action] == 'about'  %>
 <%= render "partials/secondaryHeader" %>
 <% end %>
 
