--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -79,7 +79,7 @@
                  </a>
              </li>
              <li>
-                 <a href="#">My Account</a>
+                 <a href="/home/myAccount">My Account</a>
              </li>
              <li>
                  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
