--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -15,7 +15,7 @@
   		<div class="col-md-2">
 
   			<h3>
-  			psum dolor sit amet.
+  			Group List
   			</h3>
   			<ol>
   				<li class="list-item">
@@ -33,44 +33,57 @@
   		<div class="col-md-8">
   			<div class="row">
   				<div class="col-md-4">
-
-    <!-- Container -->
+      <!-- progress bar -->
         <div class="bar-container" id="myDiv">
           <div class="bar" id="bar"></div>
         </div>
-    <!-- End Of Container -->
+
 
   				</div>
   				<div class="col-md-8">
   					<h3>
   						[GROUP NAME] PAYMENTS
   					</h3>
-  					<ol>
-  						<li class="list-item">
-  							Lorem ipsum dolor sit amet
-  						</li>
-  						<li class="list-item">
-  							Consectetur adipiscing elit
-  						</li>
-  						<li class="list-item">
-  							Integer molestie lorem at massa
-  						</li>
-  						<li class="list-item">
-  							Facilisis in pretium nisl aliquet
-  						</li>
-  						<li class="list-item">
-  							Nulla volutpat aliquam velit
-  						</li>
-  						<li class="list-item">
-  							Faucibus porta lacus fringilla vel
-  						</li>
-  						<li class="list-item">
-  							Aenean sit amet erat nunc
-  						</li>
-  						<li class="list-item">
-  							Eget porttitor lorem
-  						</li>
-  					</ol>
+            <div class="table-responsive">
+            <table id="productSizes" class="table">
+		<thead>
+			<tr>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Klyde Moradeyo</td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Alejandro Hernandez</td>
+				<td>Cell 2</td>
+				<td>Cell 3</td>
+				<td>Cell 4</td>
+			</tr>
+			<tr>
+				<td>Krupa Patel</td>
+				<td>Cell 2</td>
+				<td>Cell 3</td>
+				<td>Cell 4</td>
+			</tr>
+			<tr>
+				<td>Angel</td>
+				<td>Cell 2</td>
+				<td>Cell 3</td>
+				<td>Cell 4</td>
+			</tr>
+			<tr>
+				<td>Cell 1</td>
+				<td>Cell 2</td>
+				<td>Cell 3</td>
+				<td>Cell 4</td>
+			</tr>
+		</tbody>
+	</table>
+  </div>
   					<button type="button" class="btn btn-success">
   						Button
   					</button>
