--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -3,9 +3,6 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 @import 'application.scss';
 
-h1{
-  text-align: center;
-}
 .row {
     display: table;
 }
@@ -14,6 +11,7 @@ h1{
     float: none;
     display: table-cell;
     vertical-align: top;
+    //border: solid blue;
 
 }
 
@@ -32,6 +30,7 @@ h1{
    overflow: hidden;
    width:100%;
    min-width: 650px;
+
 }
 
 .pageDescription{
@@ -58,6 +57,7 @@ h1{
   border-radius: 5px / 5px;
   border: 2px solid rgba(67, 67, 67, 0.5);
   margin: 5px;
+  min-width: 200px;
 }
 
 .float-box-mid{
@@ -69,7 +69,7 @@ h1{
   border-radius: 5px / 5px;
   border: 2px solid rgba(67, 67, 67, 0.5);
   margin: 5px ;
-  width: 600px;
+  min-width: 600px;
 }
 
 
@@ -91,10 +91,11 @@ h1{
   width: 50%;
   border-radius: 10px;
   margin-top: 10%;
-  margin-left: 15%;
+  margin-left: 20%;
   margin: 15%;
   opacity: 0.8;
 }
+
 .bar {
   //display: inline-block;
   background: #00F260;  /* fallback for old browsers */
@@ -180,5 +181,12 @@ tbody {
 	}
 }
 .table-responsive{
-  min-width: 400px;
+
+}
+
+//Button
+#btnGoals{
+  margin-left: 20%;
+  margin: 1%;
+  width: 150px;
 }
