--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,38 +1,56 @@
 <%-         #   This is the Goals Page     WORK IN PROGRESS  #          -%>
 <html lang="en"><head>
-
+  <%= stylesheet_link_tag "goals" %>
+  <%= stylesheet_link_tag "header" %>
   <%= javascript_pack_tag 'goals', 'data-turbolinks-track': 'reload' %>
 
 </head>
 
 <body>
-  <div id ="content" class="container-fluid" style="margin-top: 15%; border: solid black; margin-left: 2%;">
+  <div id ="content" class="container" style="margin-top: 13%; margin-left: 7%;">
   	<div class="row">
 
       <!-- left float -->
 
 <div class="float-box-left">
-  		<div class="col-md-2">
+  		<div class="col-md-2" style="min-width: 200px;">
 
-  			<h3>
+  			<h3 style="margin: 10%;">
   			Group List
   			</h3>
-  			<ol>
-  				<li class="list-item">
-  					Lorem ipsum dolor sit amet
-  				</li>
-  				<li class="list-item">
-  					Consectetur adipiscing elit
-  				</li>
-
-  			</ol>
+        <div class="table-responsive">
+        <table id="productSizes" class="table">
+<thead>
+  <tr>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>Eagles</td>
+  </tr>
+  <tr>
+    <td>Group 14</td>
+  </tr>
+  <tr>
+    <td>Boston</td>
+  </tr>
+  <tr>
+    <td>Mephis</td>
+  </tr>
+  <tr>
+    <td>Cell 1</td>
+  </tr>
+</tbody>
+</table>
+</div>
   		</div> </div>
 
         <!-- middle float -->
         <div class="float-box-mid">
-  		<div class="col-md-8">
+  		<div class="col-md-8" style="width: 600px;">
   			<div class="row">
   				<div class="col-md-4">
+
       <!-- progress bar -->
         <div class="bar-container" id="myDiv">
           <div class="bar" id="bar"></div>
@@ -41,7 +59,7 @@
 
   				</div>
   				<div class="col-md-8">
-  					<h3>
+  					<h3 style="margin: 5%;">
   						[GROUP NAME] PAYMENTS
   					</h3>
             <div class="table-responsive">
@@ -84,11 +102,12 @@
 		</tbody>
 	</table>
   </div>
-  					<button type="button" class="btn btn-success">
-  						Button
+<br>
+  					<button type="button" class="btn btn-success" id="btnGoals" >
+  						New Payment
   					</button>
-  					<button type="button" class="btn btn-success">
-  						Button
+  					<button type="button" class="btn btn-success" id="btnGoals">
+  						New Goal
   					</button>
   				</div>
   			</div>
@@ -98,31 +117,52 @@
       <!-- right float -->
       <!-- right float top -->
 
-      <div class="col-md-2">
+      <div class="col-md-2" style="min-width: 300px;">
 
         <div class="float-box-right">
   			<div class="row">
-  				<div class="col-md-12">
-  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-  				</div>
+          <svg viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" width="150px" height="150px" style="border:1px solid black">
+
+
+                      <text  x="32%" y="30%" text-anchor="middle" fill="white" font-size="10px" font-family="Arial" dy=".3em">£
+                         <tspan class="em" x="54%" y="37%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">45 000</tspan>
+                         <tspan class="em" x="52%" y="43%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">_____</tspan>
+                         <tspan class="em" x="50%" y="65%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">50 000</tspan>
+                      </text>
+
+                  </svg>
   			</div>
         </div>
 
         <!-- right float middle -->
         <div class="float-box-right">
   			<div class="row">
-  				<div class="col-md-12">
-  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-  				</div>
+          <svg viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" width="150px" height="150px" style="border:1px solid black">
+
+
+                      <text  x="32%" y="30%" text-anchor="middle" fill="white" font-size="10px" font-family="Arial" dy=".3em">£
+                         <tspan class="em" x="54%" y="37%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">45 000</tspan>
+                         <tspan class="em" x="52%" y="43%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">_____</tspan>
+                         <tspan class="em" x="50%" y="65%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">50 000</tspan>
+                      </text>
+
+                  </svg>
   			</div>
         </div>
 
           <!-- right float bottom -->
           <div class="float-box-right">
   			<div class="row">
-  				<div class="col-md-12">
-  					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-  				</div>
+          <svg viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" width="150px" height="150px" style="border:1px solid black">
+
+
+                      <text  x="32%" y="30%" text-anchor="middle" fill="white" font-size="10px" font-family="Arial" dy=".3em">£
+                         <tspan class="em" x="54%" y="37%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">45 000</tspan>
+                         <tspan class="em" x="52%" y="43%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">_____</tspan>
+                         <tspan class="em" x="50%" y="65%" text-anchor="middle" fill="white" font-size="20px" font-family="Arial" dy=".3em">50 000</tspan>
+                      </text>
+
+                  </svg>
   			</div>
         </div>
 
@@ -134,8 +174,9 @@
 </body>
 </html>
 <!-- Text -->
-<div class="text" id="text">0%</div>
+
+<!--   End Of Button  -->
+<div class="text" id="text">20%</div>
 <!-- End Of Text -->
 !--  Button   -->
 <button class="btn" type="button" id="btn">+10</button>
-<!--   End Of Button  -->
