--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -77,7 +77,7 @@
                   <a href="#">Portfolio</a>
               </li>
               <li>
-                  <a href="#">Contact</a>
+                  <a href="/contact">Contact</a>
               </li>
         </ul>
 </nav>
