--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
     <%= render "partials/header" %>
 
+    <% flash.each do |key, value| %>
+    <%= content_tag :div, content_tag(:p, value), id: "#{key}" unless value.blank? %>
+    <% end %>
 
    <%= yield %>
   </body>
