--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,15 +1,15 @@
 <h1>Contact</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<p>
+<p>Here you can contact us if you have any questions. Please provide information about your query in the boxes below.<p>
 
   <%= form_tag request_contact_path, method: 'post' do %>
-    <%= label_tag :name, t('.name') %>
-    <%= text_field_tag :name, '', title: t('.enter_name'), size: 50 %>
-
     <%= label_tag :email, t('.email') %>
-    <%= email_field_tag :email, '', title: t('.enter_email') %>
+    <%= email_field_tag :email, '', title: t('.enter_email'), size: 50 %>
 
-    <%= label_tag :telephone, t('.telephone') %>
-    <%= telephone_field_tag :telephone, '', title: t('.enter_telephone') %>
+    <%= label_tag :confirm_email, t('.confirm_email') %>
+    <%= email_field_tag :confirm_email, '', title: t('.confirm_email'), size: 50 %>
+
+    <%= label_tag :subject, t('.subject') %>
+    <%= telephone_field_tag :subject, '', title: t('.enter_subject'), size: 50 %>
 
     <%= label_tag :message, t('.message') %>
     <%= text_field_tag :message, '', title: t('.enter_message'), size: 100 %>
