--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -31,7 +31,7 @@
         <h2 class="text-center">
           Contact Us
         </h2>
-        <p>Lorem ipsum dolor sit amet, consecteteur adipiscing elit, sed do eiusmod...
+        <p>Click <a href="/contact">here</a> if you want to send us a question!
         </p>
       </div>
 		</div>
