Handle payment processing.

--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -190,3 +190,10 @@ tbody {
   margin: 1%;
   width: 150px;
 }
+
+//#paymentAmount::before {
+//  content: "£";
+//  color: black;
+//  position: absolute;
+//  right: -10px;
+//}
