--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -75,7 +75,7 @@
 
              <li class="sidebar-brand">
                  <a >
-                     <%= current_user.email %>
+                     <%= current_user.username %>
                  </a>
              </li>
              <li>
