--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,4 @@
 
-
 <body>
   <div class="form">
     <div class="card">
@@ -12,6 +11,12 @@
         <div class="input-group form-group">
           <div class="input-group-prepend">
               <span class="input-group-text"><i class="fa fa-user"></i></span>
+          </div>
+            <%= f.text_field :username, class:'form-control',placeholder:"username", autofocus: true, autocomplete: "username" %>
+        </div>
+        <div class="input-group form-group">
+          <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-envelope"></i></span>
           </div>
             <%= f.email_field :email, class:'form-control',placeholder:"e-mail", autofocus: true, autocomplete: "email" %>
         </div>
@@ -26,6 +31,10 @@
                 <span class="input-group-text"><%= fa_icon "lock" %></span>
             </div>
             <%= f.password_field :password_confirmation, class:'form-control',placeholder:"password confirmation",autocomplete: "new-password" %>
+          </div>
+          <div class="field">
+            <%= f.check_box :is_organisation %>
+            <%= f.label :organisation_account? %>
           </div>
           <% if devise_mapping.rememberable? %>
             <div class="field">
