manage page added, users/show & users/delete implemented

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,10 @@
             <%= f.check_box :is_organisation %>
             <%= f.label :organisation_account? %>
           </div>
+          <div class="field">
+            <%= f.check_box :is_admin %>
+            <%= f.label :admin? %>
+          </div>
           <% if devise_mapping.rememberable? %>
             <div class="field">
               <%= f.check_box :remember_me %>
