--- a/app/views/home/myAccount.html.erb
+++ b/app/views/home/myAccount.html.erb
@@ -7,7 +7,7 @@
           <a href="#">
           <div class="row">
               <div class="col-md-3">
-               <i class="fa fa-user"></i>
+               <i class="fa fa-user" id="userpic"></i>
               </div>
           </div>
           <div class="row" >
