--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -229,15 +229,18 @@ div{
   top: 80px;
   left: 65px;
 }
+
+
 .prev-account-item i{
     font-size: 3em;
     color: black;
 }
 .prev-account-item{
    box-shadow: 1px 1px 5px 1px #000000;
-   margin: 4px;
+   margin-left: 20px;
    padding: 15px 10px;
    background-color: 0,0,0,0.2;
+   width: 30px;
    height: auto;
    border-radius: 5px;
    transition: .3s linear all;
@@ -271,4 +274,51 @@ form label {
   margin-left: 5px;
   margin-top: 6px;
   margin-bottom: 5px;
+}
+
+
+//manage page-------------------------------------------------------------
+
+#usericon{
+  font-size: 4em;
+  color: black;
+}
+.info-block
+{   box-shadow: 1px 1px 3px 1px #000000;
+   margin-left: 20px;
+   padding: 15px 10px;
+   background-color: 0,0,0,0.2;
+   width: 300px;
+   height: auto;
+   border-radius: 5px;
+   transition: .3s linear all;
+   //border: 1px solid #000000;
+    margin-bottom:25px;
+    margin-top:10px;
+
+}
+
+.info-block .square-box
+{
+    width:100px;
+    min-height:110px;
+    margin-right:22px;
+    background-color:#676767;
+    padding:20px;
+}
+
+.info-block.block-info
+{
+    //border-color:#20819e;
+}
+
+.info-block.block-info .square-box
+{
+    background-color:#20819e;
+    color:#FFF;
+}
+
+#textuser{
+  color: black;
+  opacity: 0.94;
 }
