--- a/app/views/home/myAccount.html.erb
+++ b/app/views/home/myAccount.html.erb
@@ -21,17 +21,16 @@
       </div>
 <!-- your details bubble link -->
       <div class="col-md-3  prev-account-item">
-          <a href="#">
+          <a href="/payments/all">
           <div class="row">
               <div class="col-md-3">
                <i class="fa fa-university"></i>
               </div>
           </div>
           <div class="row" >
-              <div class="col-md-9" id ="textAcc">
+              <div class="col-md-9" id ="accPaymentHistory">
                   <h5><strong>Your payments</strong></h5>
                   View your transactions
-
               </div>
           </div>
           </a>
