added personal Goals page

--- a/app/assets/stylesheets/goals.scss
+++ b/app/assets/stylesheets/goals.scss
@@ -21,6 +21,26 @@
   margin-left: 17%;
 }
 
+.col-md-2{
+  min-width: 200px;
+}
+
+.grp-list{
+  margin: 10%;
+}
+
+#mid-box{
+  min-width: 600px;
+}
+
+#grp-name-payment{
+  margin: 5%;
+}
+
+#right-float{
+  min-width: 300px;
+}
+
 .pageNavBar{
   background-color: $color1;
   float: left;
