--- a/app/views/partials/_secondaryHeader.html.erb
+++ b/app/views/partials/_secondaryHeader.html.erb
@@ -5,7 +5,7 @@
 <div class="pageNavBar">
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" href="#" style="color: white;">Personal Goals</a>
+    <a class="nav-link active" href="/persGoals" style="color: white;">Personal Goals</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/goals" style="color: white;">Group Goals</a>
