--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -6,7 +6,7 @@
 
 </head>
 
-<body>
+<body class="dashboard">
   <div id ="content" class="container"   style="  margin-top: 13%; margin-left: 7%;">
   	<div class="row">
 
