--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,8 @@ $color5: #bfe5ff;
 $background: asset_data_url('sky');
 $background_blur: asset_data_url('sky_blur');
 $background_darkBlur: asset_data_url('sky_blur2');
+
+/* background grey */
+#grey {
+background: $color3;
+}
