--- a/app/views/home/myAccount.html.erb
+++ b/app/views/home/myAccount.html.erb
@@ -1,6 +1,8 @@
 
-
-<div class="container" id="bubbles">
+<% stylesheet_link_tag 'application' %>
+<html >
+<body id="grey">
+<div class="container-fluid" id="bubbles" style=" margin-left: 5%; margin-top: 10%;">
     <div class="row">
 <!-- your details bubble link -->
       <div class="col-md-3  prev-account-item">
@@ -75,3 +77,5 @@
       </div>
 </div>
 </div>
+</div>
+</html>
