few background changes on pages

--- a/app/views/partials/_secondaryHeader.html.erb
+++ b/app/views/partials/_secondaryHeader.html.erb
@@ -119,19 +119,19 @@
   <div class="pageNavBar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" href="/persGoals" style="color: white;">Overview   </a>
+      <a class="nav-link active" href="#" style="color: white;">Overview   </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/goals" style="color: white;">   Your Details</a>
+      <a class="nav-link" href="#" style="color: white;">   Your Details</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/goals" style="color: white;">   Your Payments</a>
+      <a class="nav-link" href="/payments/all" style="color: white;">   Your Payments</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/goals" style="color: white;">   Account & Security</a>
+      <a class="nav-link" href="#" style="color: white;">   Account & Security</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/goals" style="color: white;">   Privacy</a>
+      <a class="nav-link" href="#" style="color: white;">   Privacy</a>
     </li>
   </ul>
 
@@ -146,7 +146,7 @@
     My Account
   </h1>
   <p>
-    Manage your accout.
+    Manage your account.
   </p>
   </div>
 
