--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -247,10 +247,15 @@ div{
  }
 
  .prev-account-item:hover {
- background: #eee;
+ background: #000000;
 
  }
 #textAcc{
+  color: black;
+  opacity: 0.7;
+}
+
+#accPaymentHistory {
   color: black;
   opacity: 0.7;
 }
@@ -285,7 +290,7 @@ form label {
 {   box-shadow: 1px 1px 3px 1px #000000;
    margin-left: 20px;
    padding: 15px 10px;
-   background-color: 0,0,0,0.2;
+   background-color: rgba(191,229,255, 0.4);
    width: 300px;
    height: auto;
    border-radius: 5px;
@@ -303,6 +308,7 @@ form label {
     margin-right:22px;
     background-color:#676767;
     padding:20px;
+      border: 2px solid red;
 }
 
 .info-block.block-info
