--- a/app/views/home/manage.html.erb
+++ b/app/views/home/manage.html.erb
@@ -1,4 +1,4 @@
-
+<% stylesheet_link_tag 'goals' %>
 <script type="text/javascript">
   $(function() {
     $('#input-search').on('keyup', function() {
@@ -10,15 +10,16 @@
     });
 });
 </script>
-
+<html>
+<body id="grey">
 <% @users = User.all %>
-<div class="container">
+<div class="container" style="margin-top: 9%">
 	<div class="row">
         <div class="col-lg-12">
           <form class="form-inline" id ="textuser">
               <i class="fa fa-search" aria-hidden="true"></i>
               <input class="form-control form-control-sm ml-3 w-75" type="text" id="input-search"  placeholder="Search Users..." aria-label="Search">
-          </form>
+          </form>  <br>
         </div>
             <% @users.each do |user| %>
         <div class="searchable-container">
@@ -50,3 +51,5 @@
           <% end %>
 	</div>
 </div>
+</d
+</html>
