--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -88,6 +88,19 @@
              <li>
                  <a href="/home/manage">Manage</a>
              </li>
+             <li id="dvReportSeparator">
+               Reports
+             </li>
+             <li>
+<!--               <a href="/admin_reports/all">All goals</a>-->
+               <%= link_to "All goals", report_gen_path_url(report_type: :all), format: 'pdf' %>
+             </li>
+             <li>
+               <a href="/admin_reports/funded">Only funded goals</a>
+             </li>
+             <li>
+               <a href="/admin_reports/non_funded">Only non-funded goals</a>
+             </li>
              <% end %>
          </ul>
      </div>
