changed colours, personal goal page, group goal page and added some links etc

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 	</div>
-<br><br><br><br>
+
   <!-- Second Row -->
 	<div class="row justify-content-center">
 
@@ -102,7 +102,9 @@
 
 
               <BR>
-			<button type="button" class="btn btn-light"> More Info</button>
+
+			<a href="/persGoals" type="button" class="btn btn-light" style="color: white;"> More Info</button>
+      </a>
 		</div>
     </div>
 
