--- a/app/views/home/myAccount.html.erb
+++ b/app/views/home/myAccount.html.erb
@@ -6,10 +6,10 @@
     <div class="row">
 <!-- your details bubble link -->
       <div class="col-md-3  prev-account-item">
-          <a href="#">
+          <a href="/users/edit">
           <div class="row">
               <div class="col-md-3">
-               <i class="fa fa-user" id="userpic"></i>
+               <i class="fa fa-user" id="userpic" ></i>
               </div>
           </div>
           <div class="row" >
@@ -21,7 +21,7 @@
           </div>
           </a>
       </div>
-    
+
 <!-- your details bubble link -->
       <div class="col-md-3  prev-account-item">
           <a href="/payments/all">
