--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="form">
   <div class="card">
     <div class="card-header">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        <h2> <%= current_user.username %></h2>
     </div>
     <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -42,11 +42,16 @@
 
         <div class="actions">
           <%= f.submit "Update", class: 'btn btn-outline-dark' %>
+          <br>
         </div>
-      <% end %>
-      <h3>Cancel my account</h3>
+        <div class="actions">
+          <%= button_to "Delete Account", registration_path(resource_name), method: :delete %>
 
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), method: :delete %></p>
+          </div>
+      <% end %>
+
+
+
 
       <%= link_to "Back", :back %>
 
