--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -6,7 +6,7 @@
 
 </head>
 
-<body class="dashboard">
+<body class="Dashboard">
   <div id ="content" class="container"   style="  margin-top: 13%; margin-left: 7%;">
   	<div class="row">
 
@@ -15,30 +15,26 @@
 <div class="float-box-left">
   		<div class="col-md-2">
 
-  			<h3 class="grp-list">
+  			<h2 class="grp-list" >
   			Group List
-  			</h3>
+  			</h2>
         <div class="table-responsive">
         <table id="productSizes" class="table">
-<thead>
+<tbody >
   <tr>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>Eagles</td>
+    <td id="grp-list">Eagles</td>
   </tr>
   <tr>
-    <td>Group 14</td>
+    <td id="grp-list">Group 14</td>
   </tr>
   <tr>
-    <td>Boston</td>
+    <td id="grp-list">Boston</td>
   </tr>
   <tr>
-    <td>Mephis</td>
+    <td id="grp-list">Mephis</td>
   </tr>
   <tr>
-    <td>Cell 1</td>
+    <td id="grp-list" >Cell 1</td>
   </tr>
 </tbody>
 </table>
@@ -54,49 +50,45 @@
       <!-- progress bar -->
         <div class="bar-container" id="myDiv">
           <div class="bar" id="bar">
-          <div class="text" id="text">20%</div></div>
+          <div class="text" id="text" style="transform: rotate(180deg)">20%</div></div>
         </div>
 
 
   				</div>
   				<div class="col-md-8">
   					<h3  id="grp-name-payment">
-  						[GROUP NAME] <br>PAYMENTS
+  						[GROUP NAME] <br>Payments
   					</h3>
             <div class="table-responsive">
             <table id="productSizes" class="table">
-		<thead>
-			<tr>
-			</tr>
-		</thead>
 		<tbody>
 			<tr>
 				<td>Klyde Moradeyo <br>
         15/05/20  </td>
-				<td>£1000</td>
+				<td  id="money"><br>£1000</td>
 			</tr>
 			<tr>
 				<td>Alejandro Hernandez <br> 11/05/20</td>
-				<td>£500</td>
+				<td  id="money"><br>£500</td>
 			</tr>
 			<tr>
 				<td>Krupa Patel <br> 04/04/20</td>
-				<td>£300</td>
+				<td  id="money"><br>£300</td>
 			</tr>
 			<tr>
 				<td>Angel Pelwhatever <br> 04/03/20 </td>
-				<td>£425</td>
+				<td id="money"><br>£425</td>
 			</tr>
 		</tbody>
 	</table>
   </div>
 <br>
-  					<button type="button" class="btn btn-success" id="btnMakePayment" data-toggle="modal" data-target="#paymentModal" >
+  					<button type="button" class="btn btn-success" id="btnGoals" data-toggle="modal" data-target="#paymentModal" >
   						New Payment
   					</button>
-  					<button type="button" class="btn btn-success" id="btnGoals">
+  					<a href="/new"type="button" class="btn btn-success" id="btnGoals">
   						New Goal
-  					</button>
+  					</a>
   				</div>
   			</div>
   		</div>
