--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -26,12 +26,12 @@
                      <a class="nav-link text-light" href="/about"><i class="fa fa-circle fa-fw fa-rotate-180 mr-1"></i>About Us</a>
               </li>
                 <% end %>
-              <li class="nav-item pl-1">
+              <li class="nav-item pl-1" style="margin-top: 1%">
                 <% if user_signed_in? %>
-                 Logged in as <strong><%= current_user.username %></strong>.
+                  <strong ><%= current_user.username %></strong>.
 
-                 <%= link_to 'Edit profile' , edit_user_registration_path %> |
-                 <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+
                 <% else %>
                  <%= link_to "Sign up", new_user_registration_path %> |
                  <%= link_to "Login", new_user_session_path %>
