ActionCable for handling update to goal amounts seamlessly.

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -83,7 +83,7 @@
 	</table>
   </div>
 <br>
-  					<button type="button" class="btn btn-success" id="btnGoals" data-toggle="modal" data-target="#paymentModal" >
+  					<button type="button" class="btn btn-success" id="btnPayments" data-toggle="modal" data-target="#paymentModal" >
   						New Payment
   					</button>
   					<a href="/new"type="button" class="btn btn-success" id="btnGoals">
