--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -18,7 +18,7 @@ body {
   //  background-color: rgba(67, 67, 67, 0.5);
 }
 navbar {
-  background: url(sky);
+  background: image_path('sky.jpeg');
 }
 
 .navbar-nav .nav-link {
