group page unfinished

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,9 @@
       <div class="card-header">
           <h2>Sign up</h2>
       </div>
+      <% if @token != nil %>
+        <%= hidden_field_tag :invite_token, @token %>
+      <% end %>
       <div class="card-body">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
