--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,11 +1,13 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Groups</h1>
+<%-		#This is the Groups Page  		-%>
+<html lang="en"><head>
+  <%= stylesheet_link_tag "groups" %>
+  <%= stylesheet_link_tag "header" %>
+</head>
 
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Group Name</th>
     </tr>
   </thead>
 
@@ -20,10 +22,16 @@
     <% end %>
   </tbody>
 
-
 </table>
 
 
 <br>
 
 <%= link_to 'New Group', new_group_path %>
+
+<%#= render :partial => 'groups/group', :collection => @user.groups %>
+
+<%# Group.all.each do |group| %>
+  <%#= group.id %>
+<%# end %>
+</html>
