--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-
+<html>
 <p>
 <p>
   <strong>Name:</strong>
@@ -9,3 +9,4 @@
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
 <%= link_to 'Add Member', add_member_path(@group) %>
+</html>
