--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,12 +1,9 @@
-<%-         #   This is the Goals Page     WORK IN PROGRESS  #          -%>
-<html lang="en"><head>
-  <%= stylesheet_link_tag "goals" %>
-  <%= stylesheet_link_tag "header" %>
-  <%= javascript_pack_tag 'goals', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag "goals" %>
+<%= stylesheet_link_tag "header" %>
+<%= javascript_pack_tag 'goals', 'data-turbolinks-track': 'reload' %>
 
-</head>
-
-<body class="Dashboard">
+<div class="Dashboard">
+  <input type="hidden" id="hdnGroupId" value="1" />
   <div id ="content" class="container"   style="  margin-top: 13%; margin-left: 7%;">
   	<div class="row">
 
@@ -86,9 +83,9 @@
   					<button type="button" class="btn btn-success" id="btnPayments" data-toggle="modal" data-target="#paymentModal" >
   						New Payment
   					</button>
-  					<a href="/new"type="button" class="btn btn-success" id="btnGoals">
+            <button type="button" class="btn btn-success" id="btnGoals" data-toggle="modal" data-target="#goalModal" >
   						New Goal
-  					</a>
+  					</button>
   				</div>
   			</div>
   		</div>
@@ -148,8 +145,6 @@
   	</div>
   </div>
 
-</body>
-</html>
 <!-- Text -->
 
 <!--   End Of Button  -->
@@ -191,4 +186,47 @@
       </div>
     </div>
   </div>
+</div>
+
+<!-- Payment Modal -->
+<div class="modal fade" id="goalModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" style="color:black">Goal Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group row" style="padding-left: 10px">
+          <label for="goalName" style="color:black" class="col-form-label">Goal Name:</label>
+          <div class="col-sm-7">
+            <input id="goalName" type="text" class="form-control" />
+          </div>
+          <div>
+            <% if user_signed_in? %>
+              <input type="hidden" id="hdnUserId" value="<%= current_user.id %>" />
+            <% else %>
+              <input type="hidden" id="hdnUserId" value="0" />
+            <% end %>
+            <input type="hidden" id="hdnGoalId" value="1" />
+          </div>
+        </div>
+        <div class="form-group row" style="padding-left: 10px">
+          <label for="goalTarget" style="color:black" class="col-form-label">Goal Target:</label>
+          <input id="goalTarget" type="text" class="form-control" />
+        </div>
+        <div class="form-group row" style="padding-left: 10px">
+          <label for="goalTags" style="color:black" class="col-form-label">Tags:</label>
+          <input id="goalTags" type="text" class="form-control" />
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="confGoal">Create</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
